# reproto

./: .gitignore  .gitmodules  .rustfmt.toml  .travis.yml  CHANGELOG.md  Cargo.toml  Makefile  README.md  RELEASES.md  TODO.md  appveyor.yml  build.rs  colors.toml  index.html  install.sh  themes.toml
.cargo/: config
backend/: Cargo.toml  Makefile  README.md
backend/doc/: Cargo.toml  README.md  build.rs  themes.toml
backend/doc/src/: doc_backend.rs  doc_builder.rs  doc_collector.rs  doc_compiler.rs  doc_listeners.rs  doc_options.rs  doc_writer.rs  enum_processor.rs  imports.rs  interface_processor.rs  lib.rs  macros.rs  package_processor.rs  processor.rs  rendering.rs  service_processor.rs  tuple_processor.rs  type_processor.rs
backend/java/: Cargo.toml  README.md
backend/java/src/: builder.rs  constructor_properties.rs  fasterxml.rs  grpc.rs  java_backend.rs  java_compiler.rs  java_options.rs  lib.rs  listeners.rs  lombok.rs  models.rs  nullable.rs
backend/js/: Cargo.toml  README.md
backend/js/src/: js_backend.rs  js_compiler.rs  js_field.rs  js_file_spec.rs  lib.rs  models.rs  utils.rs
backend/json/: Cargo.toml  README.md
backend/json/src/: collector.rs  json_backend.rs  json_compiler.rs  json_options.rs  lib.rs  listeners.rs
backend/python/: Cargo.toml  README.md
backend/python/src/: field.rs  lib.rs  python_backend.rs  python_compiler.rs  python_field.rs  python_file_spec.rs
backend/rust/: Cargo.toml  README.md
backend/rust/src/: lib.rs  listeners.rs  rust_backend.rs  rust_compiler.rs  rust_file_spec.rs  rust_options.rs
backend/src/: base_decode.rs  base_encode.rs  collecting.rs  container.rs  converter.rs  dynamic_converter.rs  dynamic_decode.rs  dynamic_encode.rs  environment.rs  errors.rs  for_context.rs  imports.rs  into_model.rs  lib.rs  match_decode.rs  naming.rs  options.rs  package_processor.rs  package_utils.rs  scope.rs  value_builder.rs  variables.rs
cli/: Cargo.toml  README.md
cli/src/: build_spec.rs  config.rs  config_env.rs  errors.rs  lib.rs  main.rs  manifest.rs  utils.rs
cli/src/ops/: build.rs  check.rs  compile.rs  derive.rs  doc.rs  example.reproto  imports.rs  init.rs  language_server.rs  macros.rs  manifest.rs  mod.rs  publish.rs  repo.rs  self_update.rs  update.rs  verify.rs  watch.rs
cli/src/output/: colored.rs  json.rs  mod.rs  non_colored.rs
codeviz/: Cargo.toml  README.md
codeviz/src/java/: annotation_spec.rs  argument_spec.rs  constructor_spec.rs  element_spec.rs  file_spec.rs  interface_spec.rs  method_spec.rs  mod.rs  statement.rs  variable.rs
codeviz/src/python/: class_spec.rs  decorator_spec.rs  element_spec.rs  statement.rs  variable.rs
core/: Cargo.toml  README.md
core/src/: as_loc.rs  error_pos.rs  errors.rs  for_each_loc.rs  lib.rs  loc.rs  macros.rs  manifest.rs  merge.rs  mime.rs  models.rs  object.rs  options.rs  pos.rs  rp_by_type_match.rs  rp_by_value_match.rs  rp_code.rs  rp_decl.rs  rp_enum_body.rs  rp_enum_variant.rs  rp_field.rs  rp_field_init.rs  rp_file.rs  rp_instance.rs  rp_interface_body.rs  rp_loc.rs  rp_match_condition.rs  rp_match_decl.rs  rp_match_member.rs  rp_match_variable.rs  rp_name.rs  rp_number.rs  rp_object.rs  rp_option_decl.rs  rp_package.rs  rp_package_format.rs  rp_path_segment.rs  rp_path_spec.rs  rp_registered.rs  rp_required_package.rs  (+12 more)
eval/: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  reproto_wasm.rs  tsconfig.json  webpack.config.js
eval/local_modules/: rust.d.ts  webassembly.d.ts
eval/src/: custom.scss  index.tsx  main.scss  style.scss  wasm.d.ts  wasm.js
eval/src/components/: CsharpSettings.tsx  DartSettings.tsx  GoSettings.tsx  Hello.tsx  Input.tsx  JavaSettings.tsx  Main.tsx  OpenApiSettings.tsx  Output.tsx  OutputEditor.tsx  PythonSettings.tsx  RustSettings.tsx  SwiftSettings.tsx
eval/src/static/: common.reproto  common2.reproto  default-new.reproto  default.json  default.reproto  default.yaml  import.reproto  interface.reproto  required_fields.reproto  service.openapi.reproto  service.reproto  tuple.reproto  type.reproto  untagged.reproto
eval/tools/: build-wasm  publish
examples/rust-example/: Cargo.toml  README.md  reproto.toml
examples/rust-example/proto/: derived.reproto  github-3.0.0.reproto
lib/ast/: Cargo.toml  README.md  lib.rs  regex.rs
lib/backend-doc/: .gitignore  Cargo.toml  README.md  build.rs
lib/backend-go/: Cargo.toml
lib/backend-java/: Cargo.toml  README.md
lib/backend-js/: Cargo.toml  README.md
lib/backend-json/: Cargo.toml  README.md
lib/backend-openapi/: Cargo.toml  README.md
lib/backend-reproto/: Cargo.toml  README.md  lib.rs
lib/backend-rust/: Cargo.toml  README.md
lib/backend-swift/: Cargo.toml  README.md
pack/: Cargo.toml
pack/src/: main.rs
parser/: .gitignore  Cargo.toml  README.md  build.rs
parser/src/: ast.rs  errors.rs  into_model.rs  lexer.rs  lib.rs  parser.lalrpop  scope.rs  token.rs  utils.rs
repository/: Cargo.toml  README.md
repository/src/: checksum.rs  errors.rs  hex_slice.rs  lib.rs  metadata.rs  repository.rs  sha256.rs
reproto_core/: Cargo.toml
reproto_core/src/: error_pos.rs  errors.rs  lib.rs  loc.rs  options.rs  rp_code.rs  rp_decl.rs  rp_enum_body.rs  rp_enum_variant.rs  rp_field.rs  rp_file.rs  rp_instance.rs  rp_interface_body.rs  rp_loc.rs  rp_match_condition.rs  rp_match_decl.rs  rp_match_kind.rs  rp_name.rs  rp_option_decl.rs  rp_package.rs  rp_package_decl.rs  rp_path.rs  rp_path_fragment.rs  rp_path_segment.rs  rp_path_spec.rs  rp_registered.rs  rp_required_package.rs  rp_service_accepts.rs  rp_service_body.rs  rp_service_endpoint.rs  rp_service_response.rs  rp_service_returns.rs  rp_sub_type.rs  rp_tuple_body.rs  rp_type.rs  rp_type_body.rs  rp_type_id.rs  rp_value.rs  rp_versioned_package.rs  utils.rs
reproto_parser/: Cargo.toml
reproto_parser/src/: errors.rs  lexer.rs  lib.rs  parser.lalrpop  token.rs
reproto_repository/: Cargo.toml
reproto_repository/src/: errors.rs  lib.rs  metadata.rs  repository.rs
server/: Cargo.toml  README.md
server/src/: config.rs  errors.rs  io.rs  lib.rs  main.rs  reproto_service.rs
(+2076 files in other folders)
