[workspace]
members = [
  "cli",
  "server",
  "lib/ast",
  "lib/lexer",
  "lib/backend",
  "lib/backend-doc",
  "lib/backend-java",
  "lib/backend-js",
  "lib/backend-json",
  "lib/backend-python",
  "lib/backend-rust",
  "lib/backend-reproto",
  "lib/compile",
  "lib/core",
  "lib/manifest",
  "lib/parser",
  "lib/path-lexer",
  "lib/path-parser",
  "lib/repository",
  "lib/repository-http",
  "lib/semck",
  "lib/derive",
  "lib/semver",
  "lib/trans",
  "tools/pack",
]

exclude = [
  "it",
  "eval",
]
