[workspace]
members = [
  "cli",
  "lib/ast",
  "lib/backend",
  "lib/backend-csharp",
  "lib/backend-doc",
  "lib/backend-java",
  "lib/backend-js",
  "lib/backend-json",
  "lib/backend-python",
  "lib/backend-reproto",
  "lib/backend-rust",
  "lib/backend-swift",
  "lib/compile",
  "lib/core",
  "lib/derive",
  "lib/env",
  "lib/languageserver",
  "lib/lexer",
  "lib/manifest",
  "lib/parser",
  "lib/path-lexer",
  "lib/path-parser",
  "lib/repository",
  "lib/repository-http",
  "lib/semck",
  "lib/semver",
  "lib/trans",
  "server",
  "tools/it",
  "tools/pack",
]

exclude = [
  "it",
  "eval",
  "examples",
]
