[package]
name = "reproto_backend"
version = "0.0.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/reproto/reproto"
homepage = "https://github.com/reproto/reproto"
documentation = "https://docs.rs/reproto"
description = """
Rethinking Protocol Generators
"""

[dependencies]
reproto_core = {path = "../core"}
reproto_parser = {path = "../parser"}
reproto_repository = {path = "../repository"}

error-chain = "0.10"
log = "0.3"
linked-hash-map = "0.4"
clap = "2.24"
serde_json = "1.0"
codeviz_common = "0.1"
