[package]
name = "reproto-backend"
version = "0.2.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/reproto/reproto"
homepage = "https://github.com/reproto/reproto"
documentation = "https://docs.rs/reproto"
description = """
Rethinking Protocol Generators
"""

[dependencies]
reproto-core = {path = "../core", version = "0.2"}
reproto-parser = {path = "../parser", version = "0.2"}
reproto-repository = {path = "../repository", version = "0.2"}

error-chain = "0.11"
log = "0.3"
linked-hash-map = "0.4"
clap = "2.24"
serde_json = "1.0"
genco = {version = "0.1"}
