[package]
name = "reproto"
version = "0.3.39"
authors = ["John-John Tedro <udoprog@tedro.se>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/reproto/reproto"
homepage = "https://github.com/reproto/reproto"
documentation = "https://docs.rs/reproto"
description = """
reproto compiler
"""

[features]
default = ["notify", "self-updates", "languageserver"]
# Enable to emit very detailed tracing, potentially performance sensitive.
tracing = []
self-updates = ["same-file", "ring", "hyper", "hyper-rustls", "futures", "flate2", "tar"]
languageserver = ["reproto-languageserver"]

[dependencies]
reproto-core = {path = "../lib/core", version = "0.3"}
reproto-languageserver = {path = "../lib/languageserver", version = "0.3", optional = true}
reproto-trans = {path = "../lib/trans", version = "0.3"}
reproto-ast = {path = "../lib/ast", version = "0.3"}
reproto-semck = {path = "../lib/semck", version = "0.3"}
reproto-derive = {path = "../lib/derive", version = "0.3"}
reproto-compile = {path = "../lib/compile", version = "0.3"}
reproto-manifest = {path = "../lib/manifest", version = "0.3"}
reproto-parser = {path = "../lib/parser", version = "0.3"}
reproto-env = {path = "../lib/env", version = "0.3"}
reproto-backend = {path = "../lib/backend", version = "0.3"}
reproto-backend-doc = {path = "../lib/backend-doc", version = "0.3"}
reproto-repository = {path = "../lib/repository", version = "0.3"}
url = "1.7.1"

ansi_term = "0.11.0"
atty = "0.2.11"
clap = "2.32.0"
linked-hash-map = { version = "0.5.1", features = ["serde"] }
log = "0.4.5"
pulldown-cmark = "0.1.2"
serde = "1.0.79"
serde_json = "1.0.32"
serde_derive = "1.0.79"
toml = "0.4.8"
genco = "0.3.29"
notify = { version = "4.0.6", optional = true }

# for self-updates
same-file = { version = "1.0.3", optional = true }
ring = { version = "0.13.2", optional = true }
hyper = { version = "0.12.11", optional = true }
hyper-rustls = { version = "0.14.0", optional = true }
futures = { version = "0.1.25", optional = true }
flate2 = { version = "1.0.3", optional = true }
tar = { version = "0.4.17", optional = true }
