[package]
name = "reproto"
version = "0.4.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
license = "MIT/Apache-2.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/reproto/reproto"
homepage = "https://github.com/reproto/reproto"
documentation = "https://docs.rs/reproto"
description = """
reproto compiler
"""

[features]
default = ["notify", "self-updates", "languageserver"]
# Enable to emit very detailed tracing, potentially performance sensitive.
tracing = []
self-updates = ["same-file", "ring", "hyper", "hyper-rustls", "futures", "flate2", "tar"]

[dependencies]
core = {package = "reproto-core", path = "../lib/core", version = "0.4"}
languageserver = {package = "reproto-languageserver", path = "../lib/languageserver", version = "0.4", optional = true}
trans = {package = "reproto-trans", path = "../lib/trans", version = "0.4"}
ast = {package = "reproto-ast", path = "../lib/ast", version = "0.4"}
semck = {package = "reproto-semck", path = "../lib/semck", version = "0.4"}
derive = {package = "reproto-derive", path = "../lib/derive", version = "0.4"}
compile = {package = "reproto-compile", path = "../lib/compile", version = "0.4"}
manifest = {package = "reproto-manifest", path = "../lib/manifest", version = "0.4"}
parser = {package = "reproto-parser", path = "../lib/parser", version = "0.4"}
env = {package = "reproto-env", path = "../lib/env", version = "0.4"}
backend = {package = "reproto-backend", path = "../lib/backend", version = "0.4"}
doc = {package = "reproto-backend-doc", path = "../lib/backend-doc", version = "0.4"}
repository = {package = "reproto-repository", path = "../lib/repository", version = "0.4"}
url = "2.1.1"

tokio = {version = "0.2.0", features = ["rt-core", "net", "macros"]}
ansi_term = "0.12.1"
atty = "0.2.14"
clap = "2.33.1"
linked-hash-map = { version = "0.5.3", features = ["serde"] }
log = "0.4.8"
pulldown-cmark = "0.7.1"
serde = {version = "1.0.111", features = ["derive"]}
serde_json = "1.0.53"
toml = "0.5.6"
notify = { version = "4.0.15", optional = true }

# for self-updates
same-file = { version = "1.0.6", optional = true }
ring = { version = "0.16.14", optional = true }
hyper = { version = "0.13.6", optional = true }
hyper-rustls = { version = "0.20.0", optional = true }
futures = { version = "0.3.5", optional = true }
flate2 = { version = "1.0.14", optional = true }
tar = { version = "0.4.28", optional = true }
