[package]
name = "codeviz"
version = "0.0.1"
authors = ["John-John Tedro <udoprog@tedro.se>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/reproto/reproto"
homepage = "https://github.com/reproto/reproto"
documentation = "https://docs.rs/codeviz"
description = """
Code generator for Rust
"""

[dependencies]
error-chain = "0.10.0"
