[package]
name = "reproto-core"
version = "0.2.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/reproto/reproto"
homepage = "https://github.com/reproto/reproto"
documentation = "https://docs.rs/reproto-core"
description = """
Rethinking Protocol Generators
"""

[dependencies]
error-chain = "0.11"
num = "0.1"
mime = "0.3"
serde = {version = "1.0", features = ["rc"]}
serde_derive = "1.0"
semver = {version = "0.9", features = ["serde"]}
relative-path = {version = "0.1", features = ["serde"]}
