[package]
name = "reproto-wasm"
version = "0.4.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
license = "MIT/Apache-2.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/reproto/reproto"
homepage = "https://github.com/reproto/reproto"
documentation = "https://docs.rs/reproto-wasm"
description = """
Rethinking Protocol Generators

WebAssembly Component
"""

[dependencies]
reproto-core = {path = "../lib/core", version = "0.4"}
reproto-ast = {path = "../lib/ast", version = "0.4"}
reproto-compile = {path = "../lib/compile", version = "0.4"}
reproto-derive = {path = "../lib/derive", version = "0.4"}
reproto-manifest = {path = "../lib/manifest", version = "0.4"}
reproto-parser = {path = "../lib/parser", version = "0.4"}
reproto-backend-csharp = {path = "../lib/backend-csharp", version = "0.4"}
reproto-backend-go = {path = "../lib/backend-go", version = "0.4"}
reproto-backend-java = {path = "../lib/backend-java", version = "0.4"}
reproto-backend-js = {path = "../lib/backend-js", version = "0.4"}
reproto-backend-json = {path = "../lib/backend-json", version = "0.4"}
reproto-backend-python = {path = "../lib/backend-python", version = "0.4"}
reproto-backend-reproto = {path = "../lib/backend-reproto", version = "0.4"}
reproto-backend-rust = {path = "../lib/backend-rust", version = "0.4"}
reproto-backend-openapi = {path = "../lib/backend-openapi", version = "0.4"}
reproto-backend-swift = {path = "../lib/backend-swift", version = "0.4"}
reproto-backend-dart = {path = "../lib/backend-dart", version = "0.4"}

wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"] }
serde = "1.0.79"
serde_derive = "1.0.79"

[lib]
crate-type = ["cdylib"]

name = "reproto_wasm"
path = "reproto_wasm.rs"
