[package]
name = "reproto-pack"
version = "0.0.1"
authors = ["John-John Tedro <udoprog@tedro.se>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/reproto/reproto"
homepage = "https://github.com/reproto/reproto"
documentation = "https://docs.rs/reproto"
description = """
ReProto Pack
"""

[dependencies]
syntect = "1"
