[package]
name = "reproto-parser"
version = "0.1.3"
authors = ["John-John Tedro <udoprog@tedro.se>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/reproto/reproto"
homepage = "https://github.com/reproto/reproto"
documentation = "https://docs.rs/reproto-parser"
description = """
ReProto Parser
"""
build = "build.rs"

[features]
# Enable to emit very detailed tracing, potentially performance sensitive.
tracing = []

[dependencies]
reproto-core = {path = "../core", version = "0.1"}
error-chain = "0.10"
lalrpop-util = "0.13"
linked-hash-map = "0.4"
log = "0.3"
num = "0.1"

[build-dependencies]
lalrpop = "0.13"
