[package]
name = "reproto_repository"
version = "0.0.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/reproto/reproto"
homepage = "https://github.com/reproto/reproto"
documentation = "https://docs.rs/reproto"
description = """
Rethinking Protocol Generators
"""

[dependencies]
error-chain = "0.10.0"
toml = "0.4.1"
reproto_core = {path = "../core"}
serde = {version = "1.0.8", features = ["rc"]}
serde_derive = "1.0.8"
serde_json = "1.0.2"
url = "1.5.1"
url_serde = "0.2.0"
