[package]
name = "reproto_repository"
version = "0.0.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/reproto/reproto"
homepage = "https://github.com/reproto/reproto"
documentation = "https://docs.rs/reproto"
description = """
Rethinking Protocol Generators
"""

[dependencies]
error-chain = "0.10"
toml = "0.4"
reproto_core = {path = "../core"}
serde = {version = "1.0", features = ["rc"]}
serde_derive = "1.0"
serde_json = "1.0"
url = "1.5"
openssl = "0.9"
log = "0.3"
hex = "0.2"
git2 = "0.6"
hyper = "0.11"
tokio-core = "0.1"
futures = "0.1"
