[package]
name = "reproto_core"
version = "0.0.1"
authors = ["John-John Tedro <udoprog@tedro.se>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/reproto/reproto"
homepage = "https://github.com/reproto/reproto"
documentation = "https://docs.rs/reproto"
description = """
Rethinking Protocol Generators
"""

[dependencies]
error-chain = "0.10.0"
num = "0.1.37"
mime = "0.3.2"

[dependencies.serde]
version = "1.0.8"
features = ["rc"]

[dependencies.serde_derive]
version = "1.0.8"

[dependencies.semver]
version = "0.7.0"
features = ["serde"]
