[package]
name = "reproto_parser"
version = "0.0.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/reproto/reproto"
homepage = "https://github.com/reproto/reproto"
documentation = "https://docs.rs/reproto"
description = """
Rethinking Protocol Generators
"""
build = "build.rs"

[features]
# Enable to emit very detailed tracing, potentially performance sensitive.
tracing = []

[dependencies]
error-chain = "0.10.0"
log = "0.3.7"
linked-hash-map = "0.4.2"
num = "0.1.37"

[dependencies.reproto_core]
version = "0.0.0"
path = "../reproto_core"

[dependencies.lalrpop-util]
version = "0.13.0"

[build-dependencies.lalrpop-snap]
version = "0.13.0"
