[package]
name = "reproto-server"
version = "0.3.39"
authors = ["John-John Tedro <udoprog@tedro.se>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/reproto/reproto"
homepage = "https://github.com/reproto/reproto"
documentation = "https://docs.rs/reproto-server"
description = """
reproto repository server
"""

[features]
# Enable to emit very detailed tracing, potentially performance sensitive.
tracing = []

[dependencies]
reproto-repository = {path = "../lib/repository", version = "0.3"}
reproto-core = {path = "../lib/core", version = "0.3"}

tokio-io = "0.1.7"
tokio-fs = "0.1.3"
futures = "0.1.23"
futures-cpupool = "0.1.8"
hyper = "0.12.8"
pretty_env_logger = "0.2.4"
log = "0.4.4"
flate2 = "1.0.2"
clap = "2.32.0"
toml = "0.4.6"
serde = "1.0.71"
serde_derive = "1.0.71"
