[package]
name = "reproto-server"
version = "0.3.39"
authors = ["John-John Tedro <udoprog@tedro.se>"]
license = "MIT/Apache-2.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/reproto/reproto"
homepage = "https://github.com/reproto/reproto"
documentation = "https://docs.rs/reproto-server"
description = """
reproto repository server
"""

[features]
# Enable to emit very detailed tracing, potentially performance sensitive.
tracing = []

[dependencies]
reproto-repository = { path = "../lib/repository", version = "0.3" }
reproto-core = { path = "../lib/core", version = "0.3" }

tokio = { version = "0.2.0", features = ["full"] }
futures = "0.3.5"
hyper = "0.13.6"
pretty_env_logger = "0.4.0"
log = "0.4.8"
flate2 = "1.0.14"
clap = "2.33.1"
toml = "0.5.6"
serde = "1.0.111"
serde_derive = "1.0.111"
