[package]
name = "reproto-server"
version = "0.4.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
license = "MIT/Apache-2.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/reproto/reproto"
homepage = "https://github.com/reproto/reproto"
documentation = "https://docs.rs/reproto-server"
description = """
reproto repository server
"""

[features]
# Enable to emit very detailed tracing, potentially performance sensitive.
tracing = []

[dependencies]
reproto-repository = { path = "../lib/repository", version = "0.4" }
reproto-core = { path = "../lib/core", version = "0.4" }

tokio = {version = "1.19.2", features = ["full", "macros"]}
tokio-stream = "0.1.9"
futures = "0.3.21"
hyper = {version = "0.14.19", features = ["server", "stream"]}
pretty_env_logger = "0.4.0"
log = "0.4.17"
flate2 = "1.0.24"
clap = "3.2.6"
toml = "0.5.9"
serde = "1.0.137"
serde_derive = "1.0.137"
