[package]
name = "reproto_backend_doc"
version = "0.0.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/reproto/reproto"
homepage = "https://github.com/reproto/reproto"
documentation = "https://docs.rs/reproto"
description = """
Rethinking Protocol Generators
"""
build = "build.rs"

[dependencies]
log = "0.3.7"
pulldown-cmark = "0.0.14"

[dependencies.codeviz]
version = "0.0.16"

[dependencies.reproto_backend]
version = "0.0.0"
path = ".."

[build-dependencies]
toml = "0.4.1"
handlebars = "0.27.0"
serde_json = "1.0.2"
