[package]
name = "reproto_backend_doc"
version = "0.0.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/reproto/reproto"
homepage = "https://github.com/reproto/reproto"
documentation = "https://docs.rs/reproto"
description = """
Rethinking Protocol Generators
"""
build = "build.rs"

[dependencies]
reproto_backend = {path = ".."}
log = "0.3"
pulldown-cmark = "0.0.14"
codeviz_common = "0.1"

[build-dependencies]
toml = "0.4"
handlebars = "0.27"
serde_json = "1.0"
