[package]
name = "reproto-backend-doc"
version = "0.3.2"
authors = ["John-John Tedro <udoprog@tedro.se>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/reproto/reproto"
homepage = "https://github.com/reproto/reproto"
documentation = "https://docs.rs/reproto-backend-doc"
description = """
Rethinking Protocol Generators
"""
build = "build.rs"

[dependencies]
reproto-backend = {path = "..", version = "0.3"}
reproto-core = {path = "../../core", version = "0.3"}

log = "0.3"
pulldown-cmark = "0.0.14"
genco = {version = "0.1"}

[build-dependencies]
toml = "0.4"
handlebars = "0.27"
serde_json = "1.0"
