[package]
name = "reproto_backend_java"
version = "0.0.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/reproto/reproto"
homepage = "https://github.com/reproto/reproto"
documentation = "https://docs.rs/reproto"
description = """
Rethinking Protocol Generators
"""

[dependencies]
log = "0.3.7"
codeviz_java = "0.1.0"
codeviz_macros = "0.1.0"
reproto_backend = {path = ".."}
