[package]
name = "reproto-backend-js"
version = "0.0.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/reproto/reproto"
homepage = "https://github.com/reproto/reproto"
documentation = "https://docs.rs/reproto"
description = """
Rethinking Protocol Generators
"""

[dependencies]
reproto-backend = {path = "..", version = "0.0"}

codeviz_js = "0.1"
codeviz_macros = "0.1"
