[package]
name = "reproto-backend-python"
version = "0.1.5"
authors = ["John-John Tedro <udoprog@tedro.se>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/reproto/reproto"
homepage = "https://github.com/reproto/reproto"
documentation = "https://docs.rs/reproto-backend-python"
description = """
Rethinking Protocol Generators
"""

[dependencies]
reproto-backend = {path = "..", version = "0.1"}
reproto-core = {path = "../../core", version = "0.1"}

log = "0.3"
codeviz_python = "0.2"
codeviz_macros = "0.2"
