[package]
name = "reproto-backend-rust"
version = "0.3.7"
authors = ["John-John Tedro <udoprog@tedro.se>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/reproto/reproto"
homepage = "https://github.com/reproto/reproto"
documentation = "https://docs.rs/reproto-backend-rust"
description = """
Rethinking Protocol Generators
"""

[dependencies]
reproto-backend = {path = "..", version = "0.3"}
reproto-core = {path = "../../core", version = "0.3"}

log = "0.3"
genco = {version = "0.1"}
