[package]
name = "rust"
version = "0.4.0"
edition = "2021"
authors = ["John-John Tedro <udoprog@tedro.se>"]

[dependencies]
failure = "0.1.8"
serde_json = "1.0.82"
serde = "1.0.137"
serde_derive = "1.0.137"
reqwest = { version = "0.11.11", features = ["json"] }
chrono = { version = "0.4.19", features = ["serde"] }
url = "2.1.0"
percent-encoding = "2.1.0"
tokio = { version = "1.19.2", features = ["full", "macros"] }
