[package]
name = "reproto-ast"
version = "0.3.34"
authors = ["John-John Tedro <udoprog@tedro.se>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/reproto/reproto"
homepage = "https://github.com/reproto/reproto"
documentation = "https://docs.rs/reproto-ast"
description = """
structures for the reproto AST
"""

[dependencies]
reproto-core = {path = "../core", version = "0.3"}
reproto-lexer = {path = "../lexer", version = "0.3"}

[lib]
path = "lib.rs"
