[package]
name = "reproto-ast"
version = "0.4.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
license = "MIT/Apache-2.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/reproto/reproto"
homepage = "https://github.com/reproto/reproto"
documentation = "https://docs.rs/reproto-ast"
description = """
structures for the reproto AST
"""

[dependencies]
reproto-core = {path = "../core", version = "0.4"}

[lib]
path = "lib.rs"
