[package]
name = "reproto-backend-doc"
version = "0.3.39"
authors = ["John-John Tedro <udoprog@tedro.se>"]
license = "MIT/Apache-2.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/reproto/reproto"
homepage = "https://github.com/reproto/reproto"
documentation = "https://docs.rs/reproto-backend-doc"
description = """
Rethinking Protocol Generators
"""
build = "build.rs"

[dependencies]
reproto-backend = {path = "../backend", version = "0.3"}
reproto-core = {path = "../core", version = "0.3"}
reproto-trans = {path = "../trans", version = "0.3"}
reproto-manifest = {path = "../manifest", version = "0.3"}

log = "0.4.8"
pulldown-cmark = "0.7.1"
genco = "0.4.0"
clap = "2.33.1"
syntect = "4.2.0"

[build-dependencies]
toml = "0.5.6"
handlebars = "3.0.1"
serde_json = "1.0.53"
