[package]
name = "reproto-backend-doc"
version = "0.4.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
license = "MIT/Apache-2.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/reproto/reproto"
homepage = "https://github.com/reproto/reproto"
documentation = "https://docs.rs/reproto-backend-doc"
description = """
Rethinking Protocol Generators
"""
build = "build.rs"

[dependencies]
backend = {package = "reproto-backend", path = "../backend", version = "0.4"}
reproto-core = {path = "../core", version = "0.4"}
trans = {package = "reproto-trans", path = "../trans", version = "0.4"}
manifest = {package = "reproto-manifest", path = "../manifest", version = "0.4"}

log = "0.4.17"
pulldown-cmark = "0.9.1"
genco = "0.17.0"
clap = "3.2.7"
syntect = "5.0.0"

[build-dependencies]
toml = "0.5.9"
handlebars = "4.3.1"
serde_json = "1.0.82"
