[package]
name = "reproto-backend-java"
version = "0.3.8"
authors = ["John-John Tedro <udoprog@tedro.se>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/reproto/reproto"
homepage = "https://github.com/reproto/reproto"
documentation = "https://docs.rs/reproto-backend-java"
description = """
Rethinking Protocol Generators
"""

[dependencies]
reproto-backend = {path = "../backend", version = "0.3"}
reproto-core = {path = "../core", version = "0.3"}
reproto-manifest = {path = "../manifest", version = "0.3"}

genco = {version = "0.1"}
log = "0.3"
serde = "1.0"
serde_derive = "1.0"
toml = "0.4"
