[package]
name = "reproto-backend-json"
version = "0.4.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
license = "MIT/Apache-2.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/reproto/reproto"
homepage = "https://github.com/reproto/reproto"
documentation = "https://docs.rs/reproto-backend-json"
description = """
Rethinking Protocol Generators
"""

[dependencies]
backend = {package = "reproto-backend", path = "../backend", version = "0.4"}
reproto-core = {path = "../core", version = "0.4"}
trans = {package = "reproto-trans", path = "../trans", version = "0.4"}
manifest = {package = "reproto-manifest", path = "../manifest", version = "0.4"}

log = "0.4.17"
serde = "1.0.137"
serde_json = "1.0.81"
toml = "0.5.9"
